# concertus

./: Cargo.toml  onefile.rs  readme.md
docs/: keymaps.md  themes.md
docs/theme_examples/: Cherry Blossom.toml  Concertus Classic.toml  Concertus Transparent.toml  Gruvbox [No borders].toml  Monokai Classic.toml  Monokai Vivid.toml
docs/themes/: 3024.toml  Catpuccin Latte.toml  Classic.toml  Dracula.toml  Monokai_Classic.toml  Monokai_Shusia.toml  Soft Light.toml  Transparent.toml
src/: lib.rs  main.rs
src/app_core/: app.rs  key_events.rs  library.rs  mod.rs  playback.rs  player.rs  select.rs
src/database/: mod.rs  playlists.rs  queries.rs  snapshot.rs  tables.rs  worker.rs
src/domain/: album.rs  filetype.rs  long_song.rs  mod.rs  playlist.rs  queue_song.rs  simple_song.rs  waveform.rs  waveformz
src/key_handler/: action.rs  mod.rs
src/playback/: session.rs  validated_song.rs
src/player/: backend.rs  backend_cplayback.rs  backend_rodio.rs  command.rs  controller.rs  core.rs  handle.rs  metrics.rs  mod.rs  player.rs  player_event.rs  state.rs  tapped_source.rs  track.rs
src/player2/: backend.rs  backend_cplayback.rs  backend_rodio.rs  core.rs  handle.rs  metrics.rs  mod.rs  track.rs
src/tui/: layout.rs  mod.rs  renderer.rs
src/tui/widgets/: buffer_line.rs  error.rs  mod.rs  playlist_popup.rs  popup.rs  progress.rs  progress_bar.rs  root_mgmt.rs  search.rs  settings.rs  sidebar.rs  song_window.rs  waveform.rs
src/tui/widgets/popups/: error.rs  mod.rs  playlist_popup.rs  root_manager.rs  theme_manager.rs  theme_popup.rs
src/tui/widgets/progress/: mod.rs  oscilloscope.rs  progress_bar.rs  timer.rs  waveform.rs
src/tui/widgets/sidebar/: album_sidebar.rs  album_view.rs  handler.rs  mod.rs  playlist_sidebar.rs  playlist_view.rs
src/tui/widgets/tracklist/: album_tracklist.rs  album_view.rs  albumview.rs  generic_tracklist.rs  mod.rs  playlist_view.rs  queue_tracklist.rs  queueview.rs  search_results.rs  song_window.rs
src/ui_state/: album_sort.rs  bulk_select.rs  display_state.rs  mod.rs  mode.rs  multi_select.rs  pane.rs  playback.rs  playlist.rs  popup.rs  progress_display.rs  search_state.rs  theme.rs  ui_snapshot.rs  ui_state.rs  waveform.rs
src/ui_state/playback/: mod.rs  playback.rs  playback_view.rs  progress_display.rs  progress_view.rs
src/ui_state/settings/: mod.rs  root_mgmt.rs
src/ui_state/theme/: color_utils.rs  display_theme.rs  gradients.rs  mod.rs  theme_config.rs  theme_import.rs  theme_manager.rs  theme_utils.rs
