[package]
name = "concertus"
version = "0.0.8"
edition = "2024"

[dependencies]

anyhow = "1.0.100"
bincode = "2.0.1"
byteorder = "1.5"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indexmap = "2.12.0"
lofty = "0.22.4"
nohash-hasher = "0.2.0"
rand = "0.9.2"
ratatui = "*"
rayon = "1.11.0"
rodio = { git = "https://github.com/RustAudio/rodio", branch = "feat/comprehensive-seeking-and-bit-depth", features = ["default",
        "symphonia-aac",
        "symphonia-alac",
        "symphonia-mp3",
        "symphonia-isomp4"]}
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"]}
toml = "0.9.8"
tui-textarea = "0.7.0"
walkdir = "2.5.0"
unicode-normalization = "0.1.24"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
