[package]
name = "concertus"
version = "0.2.0"
edition = "2024"

[dependencies]

anyhow = "1.0.100"
# cplayback = { path = "../cplayback/" }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indexmap = "2.12.1"
lofty = "0.22.4"
nohash-hasher = "0.2.0"
rand = "0.9.2"
ratatui = {version = "0.30.0", features = ["serde"]}
rayon = "1.11.0"
rodio = { git = "https://github.com/RustAudio/rodio", branch = "feat/comprehensive-seeking-and-bit-depth", features = ["default",
        "symphonia-aac",
        "symphonia-alac",
        "symphonia-mp3",
        "symphonia-isomp4"]}
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"]}
toml = "0.9.10"
tui-textarea = {git = "https://github.com/rhysd/tui-textarea/", rev = "56f3effbf70c922ec2fb1677c16af3752d0c0bd6"}
walkdir = "2.5.0"
unicode-normalization = "0.1.25"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
